2005-05-17  Erik Hjortsberg  <erik@katastrof.nu>

	* src/framework/tinyxml/*, src/framework/Makefile.am:
		* added tinyxml implementation adapted to Ogre and with case insensitive comparison, this will lead to xerces-c being phased out

2005-05-15  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/ModelDefinition.cpp: use the S_LOG* macros

2005-05-15  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/Makefile.am: removed obsolete files

2005-05-12  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/DebugListener.cpp, src/components/ogre/DebugListener.h, src/components/ogre/EntityListener.cpp,src/components/ogre/OgreMain.diff, src/components/ogre/OgreTerrainSceneManager.h.diff, src/components/ogre/terrain.cfg:
		* removed obsolete files

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/MakeEntityWidget.*
		* fill the list of types as they appear

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* Makefile.am: don't try to compile the ember script, doh!
	* ember.spec.in: bump wf lib required

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/carpenter/*, src/components/ogre/modeldefinitions/*, src/components/ogre/jesus/*
		* general media additions

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/buildings.material: add more material and change some other

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/malebuilder.material: removed syntax error

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	* Makefile.am: copy the ember script file to the bin dir

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.*
		* allow command line switches, mostly used for defining whether ogre plugins should be loaded through binreloc or ~/.ember/plugins.cfg. Code shamelessly taken from Sear, thanks to all Sear developers.

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>
